Rename 'name' to 'repository' on values.yaml and on the needed templates

--- a/incubator/busbar/templates/kubeconfig-deployment.yaml
+++ b/incubator/busbar/templates/kubeconfig-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: {{ template "kubeConfig.fullname" . }}
-        image: {{ .Values.image.kubeconfig.name }}:{{ .Values.image.kubeconfig.tag }}
+        image: {{ .Values.image.kubeconfig.repository }}:{{ .Values.image.kubeconfig.tag }}
         imagePullPolicy: {{ .Values.image.kubeconfig.pullPolicy }}
         ports:
         - containerPort: 80
