--- a/incubator/busbar/templates/kuberegistry-daemonset.yaml
+++ b/incubator/busbar/templates/kuberegistry-daemonset.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: {{ template "kubeRegistry.fullname" . }}-internal
-        image: {{ .Values.image.kuberegistry.name }}:{{ .Values.image.kuberegistry.tag }}
+        image: {{ .Values.image.kuberegistry.repository }}:{{ .Values.image.kuberegistry.tag }}
         imagePullPolicy: {{ .Values.image.kuberegistry.pullPolicy }}
         env:
         - name: REGISTRY_HTTP_ADDR
