--- a/incubator/busbar/templates/kuberegistry-deployment.yaml
+++ b/incubator/busbar/templates/kuberegistry-deployment.yaml
@@ -28,13 +28,13 @@ spec:
         - name: REGISTRY_STORAGE
           value: s3
         - name: REGISTRY_STORAGE_S3_ACCESSKEY
-          value: {{ .Values.kubeRegistry.StorageS3Accesskey }}
+          value: {{ .Values.kubeRegistry.storageS3Accesskey }}
         - name: REGISTRY_STORAGE_S3_SECRETKEY
-          value: {{ .Values.kubeRegistry.StorageS3Secretkey }}
+          value: {{ .Values.kubeRegistry.storageS3Secretkey }}
         - name: REGISTRY_STORAGE_S3_REGION
           value: us-east-1
         - name: REGISTRY_STORAGE_S3_BUCKET
-          value: {{ .Values.kubeRegistry.StorageS3Bucket }}
+          value: {{ .Values.kubeRegistry.storageS3Bucket }}
         - name: REGISTRY_STORAGE_S3_SECURE
           value: "true"
         ports:
