--- a/incubator/gocd/templates/gocd-agent-deployment.yaml
+++ b/incubator/gocd/templates/gocd-agent-deployment.yaml
@@ -13,6 +13,7 @@ spec:
   selector:
     matchLabels:
       app: {{ template "gocd.name" . }}
+      release: {{ .Release.Name | quote }}
       component: agent
   template:
     metadata:
