[stable/consul] Add nodeAffinity settings
Use case: I want to avoid running Consul on certain nodes, such
as preemptible nodes in a Google Kubernetes Engine node pool.

The current antiAffinity setting makes this pull request a bit hacky,
but this was the quickest way to simply get my functionality running.
I definitely wouldn't like to have it merged as it is right now ;)

Are you open to having the current affinity settings as a whole
be a bit more customizable? I imagine there might be other users
with this use case.

--- a/stable/consul/values.yaml
+++ b/stable/consul/values.yaml
@@ -51,6 +51,16 @@ EncryptGossip: true
 ## to set maxUnavailable to 1.
 maxUnavailable: 1
 
+## nodeAffinity settings
+# nodeAffinity:
+#   requiredDuringSchedulingIgnoredDuringExecution:
+#     nodeSelectorTerms:
+#     - matchExpressions:
+#       - key: cloud.google.com/gke-preemptible
+#         operator: NotIn
+#         values:
+#         - true
+
 ## Anti-Affinity setting. The default "hard" will use pod anti-affinity that is
 ## requiredDuringSchedulingIgnoredDuringExecution to ensure 2 services don't
 ## end up on the same node. Setting this to "soft" will use
