--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -74,7 +74,7 @@ acme:
     godaddy:
       GODADDY_API_KEY: ""
       GODADDY_API_SECRET: ""
-    googlecloud:
+    gcloud:
       GCE_PROJECT: ""
       GCE_SERVICE_ACCOUNT_FILE: ""
     linode:
