Decommision non-persistent cassandra pods on termination
If persistence is disabled, try to prevent data loss when terminating pods by decommissioning them.

--- a/incubator/cassandra/templates/cassandra-statefulset.yaml
+++ b/incubator/cassandra/templates/cassandra-statefulset.yaml
@@ -105,6 +105,15 @@ spec:
         volumeMounts:
         - name: data
           mountPath: /var/lib/cassandra
+        {{- if not .Values.persistence.enabled }}
+        lifecycle:
+          preStop:
+            exec:
+              command: ["/bin/sh", "-c", "exec nodetool decommission"]
+        {{- end }}
+      {{- if .Values.podSettings.terminationGracePeriodSeconds }}
+      terminationGracePeriodSeconds: {{ .Values.podSettings.terminationGracePeriodSeconds }}
+      {{- end }}
       {{- if .Values.image.pullSecrets }}
       imagePullSecrets:
         - name: {{ .Values.image.pullSecrets }}
