--- a/incubator/cassandra/templates/cassandra-statefulset.yaml
+++ b/incubator/cassandra/templates/cassandra-statefulset.yaml
@@ -111,9 +111,7 @@ spec:
             exec:
               command: ["/bin/sh", "-c", "exec nodetool decommission"]
         {{- end }}
-      {{- if .Values.podSettings.terminationGracePeriodSeconds }}
-      terminationGracePeriodSeconds: {{ .Values.podSettings.terminationGracePeriodSeconds }}
-      {{- end }}
+      terminationGracePeriodSeconds: {{ default 30 .Values.podSettings.terminationGracePeriodSeconds }}
       {{- if .Values.image.pullSecrets }}
       imagePullSecrets:
         - name: {{ .Values.image.pullSecrets }}
