--- a/incubator/cassandra/values.yaml
+++ b/incubator/cassandra/values.yaml
@@ -71,6 +71,6 @@ config:
 podLabels: {}
 
 ## Additional pod-level settings
-# podSettings:
-  # # Change this to give pods more time to properly leave the cluster when not using persistent storage.
-  # terminationGracePeriodSeconds: 30
+podSettings:
+  # Change this to give pods more time to properly leave the cluster when not using persistent storage.
+  terminationGracePeriodSeconds: 30
