Updated instructions and default signature method

--- a/stable/pachyderm/templates/pachd_secret.yaml
+++ b/stable/pachyderm/templates/pachd_secret.yaml
@@ -15,8 +15,8 @@ data:
   minio-secret: {{ .Values.s3.secretKey | b64enc | quote  }}
   minio-bucket: {{ .Values.s3.bucketName | b64enc | quote }}
   minio-endpoint: {{ .Values.s3.endpoint | b64enc | quote }}
-  minio-secure: {{ .Values.s3.secure | b64enc | quote }}
-  minio-signature: {{ .Values.s3.signature | b64enc | quote }}
+  minio-secure: {{ toString .Values.s3.secure | b64enc | quote }}
+  minio-signature: {{ toString .Values.s3.signature | b64enc | quote }}
   {{- else if eq .Values.credentials "google" }}
   google-bucket: {{ .Values.google.bucketName | b64enc | quote }}
   {{- else if eq .Values.credentials "amazon" }}
