Incorporate review comments.

--- a/incubator/elasticsearch-exporter/templates/cert-secret.yaml
+++ b/incubator/elasticsearch-exporter/templates/cert-secret.yaml
@@ -2,13 +2,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "fullname" . }}-cert
+  name: {{ template "elasticsearch-exporter.fullname" . }}-cert
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-    app: {{ template "fullname" . }}
+    app: {{ template "elasticsearch-exporter.name" . }}
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-    component: elasticsearch-exporter
 type: Opaque
 data:
   ca.pem: {{ .Values.es.ssl.ca.pem | b64enc }}
