--- a/incubator/elasticsearch-exporter/Chart.yaml
+++ b/incubator/elasticsearch-exporter/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 description: Elasticsearch stats exporter for Prometheus
 name: elasticsearch-exporter
 version: 0.1.0
+appVersion: 1.0.2rc1
 sources:
   - https://github.com/justwatchcom/elasticsearch_exporter
 keywords:
@@ -9,5 +10,5 @@ keywords:
 - elasticsearch
 - monitoring
 maintainers:
-  - name: Sven Mueller
+  - name: svenmueller
     email: sven.mueller@commercetools.com
