--- a/incubator/ethereum/templates/ethstats.secret.yaml
+++ b/incubator/ethereum/templates/ethstats.secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "ethereum.fullname" . }}-ethstats-secret
+  name: {{ template "ethereum.fullname" . }}-ethstats
   labels:
-    app: {{ template "ethereum.name" . }}-ethstats-secret
+    app: {{ template "ethereum.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
