--- a/incubator/ethereum/templates/bootnode.service.yaml
+++ b/incubator/ethereum/templates/bootnode.service.yaml
@@ -1,16 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "ethereum.fullname" . }}-bootnode-service
+  name: {{ template "ethereum.fullname" . }}-bootnode
   labels:
-    app: {{ template "ethereum.name" . }}-bootnode-service
+    app: {{ template "ethereum.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    component: bootnode
 spec:
   selector:
-    app: {{ template "ethereum.name" . }}-bootnode
+    app: {{ template "ethereum.name" . }}
     release: {{ .Release.Name }}
+    component: bootnode
   clusterIP: None
   ports:
   - name: discovery
