--- a/incubator/ethereum/templates/ethstats.service.yaml
+++ b/incubator/ethereum/templates/ethstats.service.yaml
@@ -1,15 +1,18 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ template "ethereum.fullname" . }}-ethstats-service
+  name: {{ template "ethereum.fullname" . }}-ethstats
   labels:
-    app: {{ template "ethereum.name" . }}-ethstats-service
+    app: {{ template "ethereum.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    component: ethstats
 spec:
   selector:
-    app: {{ template "ethereum.name" . }}-ethstats
+    app: {{ template "ethereum.name" . }}
+    release: {{ .Release.Name }}
+    component: ethstats
   type: {{ .Values.ethstats.service.type }}
   ports:
   - port: 80
