--- a/incubator/ethereum/templates/geth-tx.service.yaml
+++ b/incubator/ethereum/templates/geth-tx.service.yaml
@@ -1,15 +1,18 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ template "ethereum.fullname" . }}-geth-tx-service
+  name: {{ template "ethereum.fullname" . }}-geth-tx
   labels:
-    app: {{ template "ethereum.name" . }}-geth-tx-service
+    app: {{ template "ethereum.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+    component: geth-tx
 spec:
   selector:
-    app: {{ template "ethereum.name" . }}-geth-tx
+    app: {{ template "ethereum.name" . }}
+    release: {{ .Release.Name }}
+    component: geth-tx
   type: {{ .Values.geth.tx.service.type }}
   sessionAffinity: ClientIP
   ports:
