--- a/stable/nuclio/templates/playground.yaml
+++ b/stable/nuclio/templates/playground.yaml
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-{{- if .Values.Playground.Enabled }}
+{{- if .Values.playground.enabled }}
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
@@ -27,7 +27,7 @@ spec:
     spec:
       containers:
       - name: {{ template "nuclio.fullname" . }}-playground
-        image: {{ template "nuclio.playgroundImage" . }}
+        image: {{ template "nuclio.playground.image" . }}
         imagePullPolicy: {{ .Values.playground.pullPolicy }}
         ports:
         - containerPort: 8070
