fixup! Optional encryptionKey

--- a/stable/metabase/templates/database-secret.yaml
+++ b/stable/metabase/templates/database-secret.yaml
@@ -9,7 +9,9 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
+  {{- if .Values.database.encryptionKey }}
   encryptionKey: {{ .Values.database.encryptionKey | b64enc | quote }}
+  {{- end }}
 {{- if ne (.Values.database.type | lower) "h2" }}
   {{- if .Values.database.connectionURI }}
   connectionURI: {{ .Values.database.connectionURI | b64enc | quote }}
