--- a/incubator/fluentd-cloudwatch/templates/serviceaccount.yaml
+++ b/incubator/fluentd-cloudwatch/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "fluentd-cloudwatch.fullname" . }}
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "fluentd-cloudwatch.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
