--- a/incubator/fluentd-cloudwatch/templates/daemonset.yaml
+++ b/incubator/fluentd-cloudwatch/templates/daemonset.yaml
@@ -1,9 +1,9 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "fluentd-cloudwatch.fullname" . }}
   labels:
-    app: {{ template "name" . }}
+    app: {{ template "fluentd-cloudwatch.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
@@ -11,7 +11,7 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "name" . }}
+        app: {{ template "fluentd-cloudwatch.name" . }}
         release: "{{ .Release.Name }}"
       annotations:
         {{ if .Values.awsRole }}iam.amazonaws.com/role: {{ .Values.awsRole }}{{ end }}
@@ -19,9 +19,9 @@ spec:
 {{ toYaml .Values.annotations | indent 8 }}
 {{- end }}
     spec:
-      serviceAccountName: {{ if .Values.rbac.create }}{{ template "fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
+      serviceAccountName: {{ if .Values.rbac.create }}{{ template "fluentd-cloudwatch.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
       containers:
-      - name: {{ template "fullname" . }}
+      - name: {{ template "fluentd-cloudwatch.fullname" . }}
         image: "{{ .Values.image }}:{{ .Values.imageTag }}"
         imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
         #hostNetwork: {{ default false .Values.hostNetwork }}
@@ -35,12 +35,12 @@ spec:
           valueFrom:
             secretKeyRef:
               key: aws_access_key_id
-              name: {{ template "fullname" . }}
+              name: {{ template "fluentd-cloudwatch.fullname" . }}
         - name: AWS_SECRET_ACCESS_KEY
           valueFrom:
             secretKeyRef:
               key: aws_secret_access_key
-              name: {{ template "fullname" . }}
+              name: {{ template "fluentd-cloudwatch.fullname" . }}
 {{- end }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
@@ -62,4 +62,4 @@ spec:
           path: /var/lib/docker/containers
       - name: config-volume
         configMap:
-          name: {{ template "fullname" . }}
+          name: {{ template "fluentd-cloudwatch.fullname" . }}
