--- a/incubator/percona-xtradb-cluster/Chart.yaml
+++ b/incubator/percona-xtradb-cluster/Chart.yaml
@@ -1,5 +1,6 @@
 name: percona-xtradb-cluster
 version: 0.0.1
+appVersion: 5.7.19
 description: free, fully compatible, enhanced, open source drop-in replacement for
   MySQL with Galera Replication (xtradb)
 keywords:
@@ -16,6 +17,6 @@ sources:
 - https://github.com/kubernetes/charts
 - https://github.com/percona-lab/percona-docker/
 maintainers:
-- name: Paul Czarkowski
+- name: paulczar
   email: username.taken@gmail.com
 engine: gotpl
