--- a/stable/nuclio/templates/playground.yaml
+++ b/stable/nuclio/templates/playground.yaml
@@ -12,10 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 {{- if .Values.playground.enabled }}
-apiVersion: apps/v1beta1
+apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
   name: {{ template "nuclio.fullname" . }}-playground
+  labels:
+    app: {{ template "nuclio.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   replicas: 1
   template:
@@ -27,7 +32,7 @@ spec:
     spec:
       containers:
       - name: {{ template "nuclio.fullname" . }}-playground
-        image: {{ template "nuclio.playground.image" . }}
+        image: "{{ .Values.playground.image }}:{{ .Values.nuclio.version }}-{{ .Values.nuclio.arch }}"
         imagePullPolicy: {{ .Values.playground.pullPolicy }}
         ports:
         - containerPort: 8070
