--- a/stable/nuclio/templates/playground-service.yaml
+++ b/stable/nuclio/templates/playground-service.yaml
@@ -16,6 +16,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "nuclio.fullname" . }}-playground
+  labels:
+    app: {{ template "nuclio.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   selector:
     app: {{ template "nuclio.name" . }}
