--- a/stable/grafana/templates/dashboards-import-job.yaml
+++ b/stable/grafana/templates/dashboards-import-job.yaml
@@ -5,17 +5,15 @@ metadata:
   labels:
     app: {{ template "grafana.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    component: "{{ .Values.server.name }}"
     heritage: "{{ .Release.Service }}"
     release: "{{ .Release.Name }}"
   name: {{ template "grafana.server.fullname" . }}-import-dashboards
 spec:
-  activeDeadlineSeconds: {{ default 300 .Values.dashboardImports.activeDeadlineSeconds }}
+  activeDeadlineSeconds: {{ .Values.dashboardImports.activeDeadlineSeconds }}
   template:
     metadata:
       labels:
         app: {{ template "grafana.fullname" . }}
-        component: "{{ .Values.server.name }}"
         release: "{{ .Release.Name }}"
     spec:
       volumes:
@@ -26,24 +24,24 @@ spec:
           configMap:
             name: {{ template "grafana.server.fullname" . }}-import-script
       containers:
-      - name: {{ template "grafana.server.fullname" . }}-dashboardimport
-        image: "{{ .Values.dashboardImports.image }}"
-        volumeMounts:
+        - name: {{ template "grafana.server.fullname" . }}-dashboardimport
+          image: "{{ .Values.dashboardImports.image }}"
+          volumeMounts:
             - name: dashboards-import-volume
               mountPath: "/var/lib/grafana/import"
             - name: dashboards-script-volume
               mountPath: "/var/lib/grafana/script"
-        env:
-        - name: ADMIN_USER
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "grafana.server.fullname" . }}
-              key: grafana-admin-user
-        - name: ADMIN_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: {{ template "grafana.server.fullname" . }}
-              key: grafana-admin-password
-        command: ["/bin/sh", "-x", "/var/lib/grafana/script/init.sh"]
+          env:
+            - name: ADMIN_USER
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "grafana.server.fullname" . }}
+                  key: grafana-admin-user
+            - name: ADMIN_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ template "grafana.server.fullname" . }}
+                  key: grafana-admin-password
+          command: ["/bin/sh", "-x", "/var/lib/grafana/script/init.sh"]
       restartPolicy: {{ .Values.dashboardImports.restartPolicy }}
 {{- end -}}
