--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -13,7 +13,7 @@ serviceType: ClusterIP
 
 ## Pod Security Context
 securityContext:
-  isEnabled: true
+  enabled: true
   fsGroup: 1001
   runAsUser: 1001
 
