--- a/stable/sematext-docker-agent/templates/daemonset.yaml
+++ b/stable/sematext-docker-agent/templates/daemonset.yaml
@@ -1,3 +1,4 @@
+{{- if or (.Values.sematext.spmToken) (.Values.sematext.logseneToken) }}
 apiVersion: apps/v1beta2
 kind: DaemonSet
 metadata:
@@ -60,3 +61,4 @@ spec:
         - name: rootfs
           hostPath:
             path: /
+{{- end }}
