--- a/incubator/mssql-linux/templates/secret.yaml
+++ b/incubator/mssql-linux/templates/secret.yaml
@@ -9,4 +9,8 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-  password: {{ randAlphaNum 15 | b64enc | quote }}
+  {{ if .Values.sapassword }}
+  sapassword:  {{ .Values.sapassword | b64enc | quote }}
+  {{ else }}
+  sapassword: {{ randAlphaNum 20 | b64enc | quote }}
+  {{ end }}
