Make api configurable and don't use latest image tag as default

--- a/stable/sematext-docker-agent/templates/daemonset.yaml
+++ b/stable/sematext-docker-agent/templates/daemonset.yaml
@@ -1,5 +1,5 @@
 {{- if or (.Values.sematext.spmToken) (.Values.sematext.logseneToken) }}
-apiVersion: apps/v1beta2
+apiVersion: {{ .Values.apiVersion }}
 kind: DaemonSet
 metadata:
   name: {{ template "sematext.fullname" . }}
