--- a/stable/sematext-docker-agent/values.yaml
+++ b/stable/sematext-docker-agent/values.yaml
@@ -1,6 +1,10 @@
+# For Kubernetes 1.8+ use apps/v1beta2
+apiVersion: extensions/v1beta1
+
 image:
   repository: sematext/sematext-agent-docker
-  tag: latest
+  # For all available tags check here https://hub.docker.com/r/sematext/sematext-agent-docker/tags/
+  tag: 1.31.48
   pullPolicy: Always
 
 sematext:
