--- a/stable/mongodb-replicaset/init/Makefile
+++ b/stable/mongodb-replicaset/init/Makefile
@@ -15,7 +15,7 @@
 all: push
 
 TAG = 0.5
-PREFIX = k8s.gcr.io/mongodb-install
+PREFIX = staging-k8s.gcr.io/mongodb-install
 
 container:
 	docker build -t $(PREFIX):$(TAG) .
