Simplify port handling.

--- a/incubator/elasticsearch-exporter/templates/service.yaml
+++ b/incubator/elasticsearch-exporter/templates/service.yaml
@@ -10,9 +10,7 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - name: http-service
-      port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+    - port: http
       protocol: TCP
   selector:
     app: {{ template "elasticsearch-exporter.name" . }}
