--- a/incubator/elasticsearch-exporter/templates/deployment.yaml
+++ b/incubator/elasticsearch-exporter/templates/deployment.yaml
@@ -42,7 +42,7 @@ spec:
                     "-es.client-cert=/ssl/client.pem",
                     "-es.client-private-key=/ssl/client.key",
                     {{- end }}
-                    "-web.listen-address=:{{ .Values.service.internalPort }}",
+                    "-web.listen-address=:{{ .Values.service.httpPort }}",
                     "-web.telemetry-path={{ .Values.web.path }}"]
           securityContext:
             capabilities:
@@ -65,7 +65,7 @@ spec:
           resources:
   {{ toYaml .Values.resources | indent 10 }}
           ports:
-            - containerPort: 9108
+            - containerPort: {{ .Values.service.httpPort }}
               name: http
           livenessProbe:
             httpGet:
