--- a/incubator/elasticsearch-exporter/values.yaml
+++ b/incubator/elasticsearch-exporter/values.yaml
@@ -8,7 +8,7 @@ restartPolicy: Always
 
 image:
   repository: justwatch/elasticsearch_exporter
-  tag: 1.0.2rc1
+  tag: 1.0.2
   pullPolicy: IfNotPresent
 
 resources:
