--- a/stable/jenkins/templates/secret.yaml
+++ b/stable/jenkins/templates/secret.yaml
@@ -10,10 +10,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{ if .Values.Master.AdminPassword }}
-  jenkins-admin-password: {{ .Values.Master.AdminPassword | b64enc | quote }}
-  {{ else }}
-  jenkins-admin-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{ end }}
-  jenkins-admin-user: {{ .Values.Master.AdminUser | b64enc | quote }}
+{{- range $name, $value := .Values.Master.Env.Secret }}
+{{- if not (empty $value) }}
+  {{ $name }}: {{ $value | b64enc }}
+{{- end }}
+{{- end }}
 {{- end }}
