--- a/stable/jenkins/values.yaml
+++ b/stable/jenkins/values.yaml
@@ -11,13 +11,16 @@ Master:
 # ImagePullSecret: jenkins
   Component: "jenkins-master"
   UseSecurity: true
-  AdminUser: admin
-  # AdminPassword: <defaults to random>
+  Env:
+    Open:
+      JAVA_OPTS: "-Xms512m -Xmx512m"   # Set min/max heap here if needed
+      JENKINS_OPTS: "" # Set jenkins options
+    Secret:
+      ADMIN_USER: "admin"
+      ADMIN_PASSWORD: "changeme"
+
   Cpu: "200m"
   Memory: "256Mi"
-  # Set min/max heap here if needed with:
-  # JavaOpts: "-Xms512m -Xmx512m"
-  # JenkinsOpts: ""
   # JenkinsUriPrefix: "/jenkins"
   # Set RunAsUser to 1000 to let Jenkins run as non-root user 'jenkins' which exists in 'jenkins/jenkins' docker image.
   # When setting RunAsUser to a different value than 0 also set FsGroup to the same value:
