Allowing HTTP-01 challenge to be enabled

--- a/stable/traefik/templates/configmap.yaml
+++ b/stable/traefik/templates/configmap.yaml
@@ -74,6 +74,10 @@ data:
     {{- if .Values.acme.logging }}
     acmeLogging = true
     {{- end }}
+    {{- if eq .Values.acme.challenge "http" }}
+    [acme.httpChallenge]
+    entryPoint = "http"
+    {{- end }}
     {{- end }}
     {{- if .Values.dashboard.enabled }}
     [web]
