--- a/stable/sentry/values.yaml
+++ b/stable/sentry/values.yaml
@@ -107,7 +107,11 @@ ingress:
 
 # TODO: add support for plugins https://docs.sentry.io/server/plugins/
 
+# Only used when internal PG is disabled
+# postgresHost: foo
+
 postgresql:
+  enabled: true
   postgresDatabase: sentry
   postgresUser: sentry
   imageTag: "9.5"
